Added rulelearn to dependencies

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ dependencies = [
     "numpy",
     "scikit-learn",
     "xgboost",
-    "corels"
+    "corels",
+    "rulelearn"
 ]
 
 [project.optional-dependencies]
